--- a/Clarinet.toml
+++ b/Clarinet.toml
@@ -9,6 +9,11 @@ requirements = []
 path = 'contracts/ProposalManager.clar'
 clarity_version = 2
 epoch = 2.5
+
+[contracts.VotingToken]
+path = 'contracts/VotingToken.clar'
+clarity_version = 2
+epoch = 2.5
 [repl.analysis]
 passes = ['check_checker']
 
