--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,15 +10,21 @@
   },
   "dependencies": {
     "@micro-stacks/client": "1.0.0",
-    "@micro-stacks/react": "1.0.0",
+    "@micro-stacks/react": "^1.0.0",
+    "@stacks/network": "^7.0.2",
+    "@stacks/transactions": "^7.0.2",
     "micro-stacks": "^1.0.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^7.0.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
     "@vitejs/plugin-react": "^2.0.0",
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.49",
+    "tailwindcss": "^3.4.15",
     "vite": "^3.0.2"
   },
   "prettier": {
